Added CheckList and Criteria Models

--- a/XFood.MVC/appsettings.json
+++ b/XFood.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=OnlineWallet;User Id=postgres;Password=uli240202;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=XFood;User Id=postgres;Password=uli240202;"
   },
   "Logging": {
     "LogLevel": {
