--- a/src/XFood.API/appsettings.json
+++ b/src/XFood.API/appsettings.json
@@ -1,10 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=XFood;User Id=postgres;Password=X5H?ehC2JTc-n7N;"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
