--- a/src/XFood.API/XFood.API.csproj
+++ b/src/XFood.API/XFood.API.csproj
@@ -8,6 +8,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="CSharpFunctionalExtensions" Version="2.40.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.25" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.25" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.25">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Account" />
+		<Folder Include="Account\Queries\" />
 		<Folder Include="Employee\Commands" />
 		<Folder Include="Test\Commands" />
 	</ItemGroup>
