--- a/src/xFood.Infrastructure/xFood.Infrastructure.csproj
+++ b/src/xFood.Infrastructure/xFood.Infrastructure.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.25" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
+    </ItemGroup>
+
 </Project>
