--- a/src/XFood.API/appsettings.Development.json
+++ b/src/XFood.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=XFood;User Id=postgres;Password=Apple@2023;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=XFood;User Id=postgres;Password=X5H?ehC2JTc-n7N;"
   },
   "Logging": {
     "LogLevel": {
