--- a/src/XFood.Web/XFoodBlazor.Web.Client.csproj
+++ b/src/XFood.Web/XFoodBlazor.Web.Client.csproj
@@ -11,6 +11,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.14" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.5" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\images\appeals\" />
 	</ItemGroup>
 
 </Project>
