--- a/src/XFood.Web/XFoodBlazor.Web.Client.csproj
+++ b/src/XFood.Web/XFoodBlazor.Web.Client.csproj
@@ -7,6 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="wwwroot\images\logoOrangeHorizontal.png" />
+	  <None Include="wwwroot\images\LogoOrangeSvg.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.14" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
