--- a/src/XFood.API/XFood.API.csproj
+++ b/src/XFood.API/XFood.API.csproj
@@ -28,5 +28,6 @@
 	<ItemGroup>
 		<Folder Include="Account\Queries\" />
 		<Folder Include="Test\Commands" />
+		<Folder Include="OpportunitySchedule\" />
 	</ItemGroup>
 </Project>
