--- a/src/XFood.API/XFood.API.csproj
+++ b/src/XFood.API/XFood.API.csproj
@@ -29,5 +29,6 @@
 	<ItemGroup>
 		<Folder Include="Account\Queries\" />
 		<Folder Include="Test\Commands" />
+		<Folder Include="images\" />
 	</ItemGroup>
 </Project>
