--- a/src/XFood.Web/XFoodBlazor.Web.Client.csproj
+++ b/src/XFood.Web/XFoodBlazor.Web.Client.csproj
@@ -24,4 +24,6 @@
 	  <Folder Include="wwwroot\fonts\images\appeals\" />
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
